--- a/app/html/filter-map/filter-map.html
+++ b/app/html/filter-map/filter-map.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="map-title">
-        <h2>Philadelphia Business Map</h2>
+        <h2>Philadelphia's Businesses and Bikeshare Map</h2>
     </div>
     <div class="filter-container">
         <h4>Filter by Neighbourhood:</h4>
@@ -56,7 +56,7 @@
     </div>
     <div class="layer-control">
         <div class="layer-item">
-            <span class="layer-name">BicycleTransitLayer</span>
+            <span class="layer-name">BikeShareLayer</span>
             <span class="layer-toggle" onclick="toggleLayer('bike-layer')"><img id="bike-layer" src="../../img/show.png"
                     style="width: 20px; height: 20px;"></span>
         </div>
