--- a/choropleth_html/choropleth-map/choropleth-map.html
+++ b/choropleth_html/choropleth-map/choropleth-map.html
@@ -26,7 +26,7 @@
                 <div class="layer-control">
                     <div class="layer-item">
                         <div class="layer-header">
-                            <span class="layer-name">TripsLayer</span>
+                            <span class="layer-name">TripNumber</span>
                             <span class="layer-toggle" onclick="toggleLayer('trips-layer')">
                                 <div id="trips-layer" class="show-icon"></div>
                             </span>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="layer-item">
                         <div class="layer-header">
-                            <span class="layer-name">BusinessDensityLayer</span>
+                            <span class="layer-name">BusinessDensity</span>
                             <span class="layer-toggle" onclick="toggleLayer('business-density-layer')">
                                 <div id="business-density-layer" class="hide-icon"></div>
                             </span>
@@ -50,7 +50,7 @@
                     </div>
                     <div class="layer-item">
                         <div class="layer-header">
-                            <span class="layer-name">PopulationDensityLayer</span>
+                            <span class="layer-name">PopulationDensity</span>
                             <span class="layer-toggle" onclick="toggleLayer('population-density-layer')">
                                 <div id="population-density-layer" class="hide-icon"></div>
                             </span>
@@ -64,7 +64,7 @@
 
                     <div class="layer-item">
                         <div class="layer-header">
-                            <span class="layer-name">MedianIncomeLayer</span>
+                            <span class="layer-name">MedianIncome</span>
                             <span class="layer-toggle" onclick="toggleLayer('median-income-layer')">
                                 <div id="median-income-layer" class="hide-icon"></div>
                             </span>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="layer-item">
                         <div class="layer-header">
-                            <span class="layer-name">WhiteProportionLayer</span>
+                            <span class="layer-name">WhiteProportion</span>
                             <span class="layer-toggle" onclick="toggleLayer('white-proportion-layer')">
                                 <div id="white-proportion-layer" class="hide-icon"></div>
                             </span>
