--- a/choropleth_html/choropleth-map/choropleth-map.html
+++ b/choropleth_html/choropleth-map/choropleth-map.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="layer-item">
                         <div class="layer-header">
-                            <span class="layer-name">BusinessDensity</span>
+                            <span class="layer-name">BusinessDensity(n/km2)</span>
                             <span class="layer-toggle" onclick="toggleLayer('business-density-layer')">
                                 <div id="business-density-layer" class="hide-icon"></div>
                             </span>
@@ -50,7 +50,7 @@
                     </div>
                     <div class="layer-item">
                         <div class="layer-header">
-                            <span class="layer-name">PopulationDensity</span>
+                            <span class="layer-name">PopulationDensity(ppl/km2)</span>
                             <span class="layer-toggle" onclick="toggleLayer('population-density-layer')">
                                 <div id="population-density-layer" class="hide-icon"></div>
                             </span>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="layer-item">
                         <div class="layer-header">
-                            <span class="layer-name">WhiteProportion</span>
+                            <span class="layer-name">WhiteProportion(%)</span>
                             <span class="layer-toggle" onclick="toggleLayer('white-proportion-layer')">
                                 <div id="white-proportion-layer" class="hide-icon"></div>
                             </span>
