--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     #cover-page {
       width: 100%;
       height: 100vh;
-      background-image: url('./img/bg.png');  /* ✅ 请确保路径正确 */
+      background-image: url('./img/bg.jpg');  /* ✅ 请确保路径正确 */
       background-size: cover;
       background-position: center;
       display: flex;
