--- a/motivation/motivation.html
+++ b/motivation/motivation.html
@@ -39,8 +39,8 @@ and bike sharing networks.<br>
         </p>
         <p class="u-align-left u-text u-text-body-alt-color u-text-3">To study the relationship between urban business networks and bike
 sharing networks<br>
-          <br>Whether the current Indego bike sharing networks and patterns have
-achieved this goal 
+          <br>Whether the current Indego bikesharing network and patterns have
+achieved its goal 
         </p>
       </div>
     </section>
