--- a/heat-map/heat-map.html
+++ b/heat-map/heat-map.html
@@ -170,7 +170,7 @@
 
             <div class="maps-section">
                 <div class="map-container">
-                    <div class="map-title">Philadelphia Bike Heat Map</div>
+                    <div class="map-title">Philadelphia Bikeshare Stations Heat Map</div>
                     <iframe id="bike-heat-map" src="bike-heat-map.html"></iframe>
                 </div>
                 <div class="map-container">
