--- a/heat-map/heat-map.html
+++ b/heat-map/heat-map.html
@@ -153,7 +153,7 @@
     <div class="container">
         <div class="maps-container">
             <div class="info-panel">
-                <h1>Bikeshare Station Networks VS Business Networks</h1>
+                <h1>Bikeshare Station Network VS Business Network</h1>
                 <p>There are currently 264 bikeshare docking stations and over 14,000 businesses in Philadelphia.</p>
                 <p>Bikeshare stations are mainly located in the city centre and surrounding neighbourhoods, reflecting
                     that the bikesharing network mainly caters to short-distance trips in the city centre and nearby
