--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Philadelphia's Bikeshare and Business Network</title>
+  <title>Philadelphia's Bikeshare and Business Networks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
@@ -114,7 +114,7 @@
 <!-- ✅ 封面页 -->
 <div id="cover-page">
   <div class="cover-content">
-    <h1>Philadelphia's Bikeshare and Business Network</h1>
+    <h1>Philadelphia's Bikeshare and Business Networks</h1>
     <p>CASA0003 Group 20</p>
     <a href="#intro" class="start-button">Get Started</a>
   </div>
