--- a/choro1/choro1.html
+++ b/choro1/choro1.html
@@ -21,7 +21,7 @@
             <input type="checkbox" id="toggle-bikeshare" checked> <label for="toggle-bikeshare">ShowBikeshareStations</label>
         </div>
         <div class="sidebar" id="legend">
-            <!-- 图例内容注入 -->
+
         </div>
     </div>
     <div class="description-text">
@@ -131,7 +131,7 @@ map.on('load', () => {
         }
     });
 
-    // White Population Proportion Layer (蓝色色谱)
+    // White Population Proportion Layer
     map.addLayer({
         id: 'whites-layer',
         type: 'fill',
