--- a/conclusion/conclusion.html
+++ b/conclusion/conclusion.html
@@ -42,7 +42,7 @@ publicity, education and community promotion activities is also a recommended
 strategy to enhance the usage rate (Caspi &amp; Noland, 2019).&nbsp;<br>
           <br>Indego has
 implemented measures such as cash payment options and discounted pricing for
-food stamp holders, which should be continued. 
+food stamp holders, which should be continued. Also, more bikeshare stations could be built in north Philadelphia.
         </p>
       </div>
     </section>
