--- a/scatter-plot-map/scatter-plot-map.html
+++ b/scatter-plot-map/scatter-plot-map.html
@@ -155,7 +155,7 @@
         <button id="businessDensity">Business Density</button>
         <button id="populationDensity">Population Density</button>
         <button id="medianIncome">Median Income</button>
-        <button id="whiteProportion">white Proportion</button>
+        <button id="whiteProportion">White Proportion</button>
     </div>
     <script type="module">
         const trendLines = {
